apps/docker-registry-ui/base/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-server
  namespace: docker-registry
  labels:
    app: registry-server
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: registry-server
