apps/docker-registry-ui/base/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: docker-registry
  labels:
    app: registry-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: registry-ui
